--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
 @media (max-width:767px) {
     .huddle {
         height: 100%;
+        background-image: url('images/bg-mobile.svg');
     }
 }
 
